Fix alignment issue in site header.

--- a/styles/book.css
+++ b/styles/book.css
@@ -1,4 +1,4 @@
-.vertical-align {
+.vertical-align-items {
   display: flex;
   align-items: center;
 }
